todo_app/manifests/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: todo-app-svc

spec:
  type: ClusterIP

  selector:
    app: todo-app

  ports:
    - name: http
      protocol: TCP
      port: 1234
      targetPort: 3000
