todo_app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: todo-app-ingress

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app-svc
                port:
                  number: 1234
